--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -1,6 +1,7 @@
 {
     "version": "1.0.0-*",
     "dependencies": {
+        "NETStandard.Library": "1.0.0-rc2-23614",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.1.0-*"
     },
