--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -1,14 +1,15 @@
 ﻿{
-    "version": "1.0.0-*",
+  "version": "1.0.0-*",
 
-    "shared": "**/*.cs",
+  "shared": "**/*.cs",
 
-    "dependencies": {
-      "NETStandard.Library": "1.0.0-rc2-23616",
-      "Microsoft.DotNet.ProjectModel": "1.0.0"
-    },
+  "dependencies": {
+    "NETStandard.Library": "1.0.0-rc2-23616",
+    "Microsoft.DotNet.ProjectModel": "1.0.0",
+    "System.Reflection.Metadata": "1.1.0"
+  },
     
-    "frameworks": {
-        "dnxcore50": { }
-    }
+  "frameworks": {
+      "dnxcore50": { }
+  }
 }
