--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23704",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-        "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.1.0-*"
+        "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.2.0-beta1-20160108-01"
     },
     "frameworks": {
         "dnxcore50": { }
