--- a/src/Microsoft.DotNet.Tools.Resgen/project.json
+++ b/src/Microsoft.DotNet.Tools.Resgen/project.json
@@ -9,7 +9,7 @@
         "System.Xml.XDocument": "4.0.11-rc2-23616",
         "System.Resources.ReaderWriter": "4.0.0-rc2-23616",
 
-        "Microsoft.CodeAnalysis.CSharp":  "1.1.1",
+        "Microsoft.CodeAnalysis.CSharp":  "1.2.0-beta1-20160108-01",
         "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
         "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
         "Microsoft.Extensions.CommandLineUtils.Sources": {
