--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -3,7 +3,7 @@
 
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23704",
-        "Microsoft.DotNet.ProjectModel": "1.0.0",
+        "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "System.Reflection.Metadata": "1.1.0",
         "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-16530"
     },
