--- a/src/dotnet-restore/project.json
+++ b/src/dotnet-restore/project.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "NuGet.CommandLine.XPlat": "3.4.0-*",
+    "NuGet.Common": "3.4.0-*",
     "Microsoft.NETCore.Platforms": "1.0.1-rc2-23608",
     "NETStandard.Library": "1.0.0-rc2-23608",
     "System.Linq": "4.0.1-beta-23504",
