--- a/src/Microsoft.DotNet.ProjectModel.Server/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Server/project.json
@@ -14,8 +14,8 @@
       "type": "build",
       "version": "1.0.0-*"
     },
-    "Microsoft.Extensions.Logging": "1.0.0-*",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-*",
+    "Microsoft.Extensions.Logging": "1.0.0-15935",
+    "Microsoft.Extensions.Logging.Console": "1.0.0-15935",
     "Newtonsoft.Json": "7.0.1"
   },
   "frameworks": {
