--- a/src/Microsoft.DotNet.Tools.New/project.json
+++ b/src/Microsoft.DotNet.Tools.New/project.json
@@ -15,7 +15,7 @@
         }
     },
     "compileExclude": [ "CSharp_Console/**", "FSharp_Console/**" ],
-    "resource": [ "CSharp_Console/**", "FSharp_Console/**" ],
+    "resource": [ "CSharp_Console/NuGet.Config", "CSharp_Console/Program.cs", "CSharp_Console/project.json", "FSharp_Console/NuGet.config, "FSharp_Console/Program.fs", "FSharp_Console/project.json"],
     "frameworks": {
         "dnxcore50": {
             "imports": "portable-net451+win8"
