Auto reference facades in the common cases - There are 2 major cases to auto reference facades: 1. When using a netstandard/dotnet* based package on a platform where the System.* packages don't provide any compilation assemblies. 2. When referencing a PCL where no dependencies were specified in the nuspec. - For 1, we handle it by replacing package references with reference assemblies if possible. For 2. We turn assembly references of PCL assemblies into package dependencies. This should cover the 90% case where people had to manually reference facades anytime they wanted to use a PCL on Net4.x.
TODO: P2P PCL references

#164

--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -6,6 +6,7 @@
     "description": "Types to model a .NET Project",
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23704",
+        "System.Reflection.Metadata": "1.2.0-rc2-23608",
         "System.Runtime.Loader": "4.0.0-rc2-23704",
         "System.Dynamic.Runtime": "4.0.11-rc2-23704",
         "System.Security.Cryptography.Algorithms": "4.0.0-rc2-23704",
