--- a/src/dotnet-build/project.json
+++ b/src/dotnet-build/project.json
@@ -8,7 +8,7 @@
         "NETStandard.Library": "1.0.0-rc3-23727",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
-        "Microsoft.DotNet.Tools.Compiler": "1.0.0-*",
+        "dotnet-compile": "1.0.0-*",
         "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
         "Microsoft.Extensions.CommandLineUtils.Sources": {
             "type": "build",
