--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -14,7 +14,7 @@
     },
     "frameworks": {
         "dnxcore50": {
-            "imports": "portable-net45+win8+wpa81+aspnetcore50"
+            "imports": "portable-net45+win8"
         }
     },
     "scripts": {
