--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -7,6 +7,7 @@
 
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23811",
+        "System.Reflection.Metadata": "1.2.0-rc3-23811",
         "System.CommandLine": "0.1.0-e160119-1",
         "Microsoft.CodeAnalysis.CSharp":  "1.2.0-beta1-20160202-02",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
