--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23811",
+        "System.Reflection.Metadata": "1.2.0-rc3-23811",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
         "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.2.0-beta1-20160202-02"
