--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -54,6 +54,7 @@
         "Microsoft.NETCore.ConsoleHost": "1.0.0-rc2-23811",
         "Microsoft.NETCore.TestHost": "1.0.0-rc2-23811",
         "NETStandard.Library": "1.0.0-rc2-23811",
+        "System.Reflection.Metadata": "1.2.0-rc3-23811",
         "System.Diagnostics.TextWriterTraceListener": "4.0.0-rc2-23811",
         "System.Diagnostics.TraceSource": "4.0.0-rc2-23811",
         "System.Linq.Expressions": "4.0.11-rc2-23811",
