--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -9,13 +9,18 @@
         "Microsoft.Extensions.PlatformAbstractions": "1.0.0-rc2-16537"
     },
     "frameworks": {
-        "net451": {},
+        "net451": {
+            "frameworkAssemblies": {
+                "System.Runtime": {
+                    "type": "build"
+                }
+            }
+        },
         "dnxcore50": {
             "imports": "portable-net45+win8",
             "dependencies": {
                 "NETStandard.Library": "1.0.0-rc2-23811"
             }
         }
-    },
-    "scripts": {}
+    }
 }
