--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -1,23 +1,23 @@
 {
     "version": "1.0.0-*",
-
     "compilationOptions": {
         "keyFile": "../../tools/Key.snk"
     },
-
     "dependencies": {
         "NETStandard.Library": "1.0.0-rc2-23811",
         "System.CommandLine": "0.1.0-e160119-1",
-        "Microsoft.CodeAnalysis.CSharp":  "1.2.0-beta1-20160202-02",
+        "Microsoft.CodeAnalysis.CSharp": "1.2.0-beta1-20160202-02",
         "Microsoft.DotNet.ProjectModel": "1.0.0-*",
         "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
-        "Microsoft.DotNet.Files": {"version": "1.0.0-*", "target": "project"}
+        "Microsoft.DotNet.Files": {
+            "version": "1.0.0-*",
+            "target": "project"
+        }
     },
     "frameworks": {
         "dnxcore50": {
             "imports": "portable-net45+win8"
         }
     },
-    "scripts": {
-    }
+    "scripts": {}
 }
