--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -5,8 +5,7 @@
     },
     "description": "Types to model a .NET Project",
     "dependencies": {
-    "System.Reflection.Metadata": "1.2.0-rc3-23811",
-
+        "System.Reflection.Metadata": "1.2.0-rc3-23811",
         "NuGet.Packaging": "3.4.0-beta-583",
         "Microsoft.Extensions.FileSystemGlobbing": "1.0.0-rc2-15996",
         "Microsoft.Extensions.JsonParser.Sources": {
@@ -23,23 +22,29 @@
         }
     },
     "frameworks": {
-    "net451": {
-      "frameworkAssemblies": {
-        "System.IO": ""
-      }
-    },
+        "net451": {
+            "frameworkAssemblies": {
+                "System.Runtime": {
+                    "type": "build"
+                },
+                "System.Collections": {
+                    "type": "build"
+                },
+                "System.IO": {
+                    "type": "build"
+                }
+            }
+        },
         "dnxcore50": {
-      "imports": "portable-net45+win8",
-      "dependencies": {
-        "NETStandard.Library": "1.0.0-rc2-23811",
-        "System.Dynamic.Runtime": "4.0.11-rc2-23811",
-        "System.Runtime.Loader": "4.0.0-rc2-23811",
-        "System.Security.Cryptography.Algorithms": "4.0.0-rc2-23811",
-        "Microsoft.CSharp": "4.0.1-rc2-23811",
-        "System.Xml.XDocument": "4.0.11-rc2-23811"
+            "imports": "portable-net45+win8",
+            "dependencies": {
+                "NETStandard.Library": "1.0.0-rc2-23811",
+                "System.Dynamic.Runtime": "4.0.11-rc2-23811",
+                "System.Runtime.Loader": "4.0.0-rc2-23811",
+                "System.Security.Cryptography.Algorithms": "4.0.0-rc2-23811",
+                "Microsoft.CSharp": "4.0.1-rc2-23811",
+                "System.Xml.XDocument": "4.0.11-rc2-23811"
+            }
         }
-    }
-    },
-    "scripts": {
     }
 }
